<resources>
    <string name="app_name">UFFF</string>
    <string name="app_name_full">
        <b>Universal FEFU Flora &amp; Fauna</b> \n
        v0.2.0
    </string>
    <string name="botany">Ботаника</string>
    <string name="dendrology">Ботаника высших (дендрология)</string>
    <string name="flowers">Ботаника цветов (первоцветы и не только)</string>
    <string name="zoology">Зоология</string>
    <string name="vertebrate">Зоология позвоночных</string>
    <string name="invertebrate">Зоология беспозвоночных</string>
    <string name="birds">Птицы</string>
    <string name="fish">Рыбы</string>
    <string name="water">Водные</string>
    <string name="ground">Наземные</string>
    <string name="about_title">О программе</string>
    <string name="about_text">
        Made by <b>JustNeedCoffee</b> \n
        Следите за обновлениями в ТГ-канале: <b>@UniversalFFF</b>
    </string>
    <string name="answer_type">Что это? Введите ответ на русском или латыни</string>
    <string name="answer_send">Отправить</string>
    <string name="clear_progress">Очистить прогресс</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="app_icon_desc">App icon</string>
</resources>