<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnBotany"
        android:layout_width="328dp"
        android:layout_height="53dp"
        android:layout_marginTop="92dp"
        android:text="@string/botany"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnZoology"
        android:layout_width="328dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:text="@string/zoology"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBotany" />

    <ImageButton
        android:id="@+id/btnInfo"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="49dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="#7E57C2"
        android:contentDescription="@string/about_title"
        android:scaleType="center"
        android:src="@android:drawable/ic_dialog_info"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- android:background="#7E57C2" -->

</androidx.constraintlayout.widget.ConstraintLayout>